QAFE-1201 [TB:S] SPIKE: As a QAFE ISV I want to see if MDI can stretch like the new SDI Mode such that visually the application is using all the space possible - small fix for SDI mode

--- a/qafe-web-gwt/src/main/webapp/css/qafe.less
+++ b/qafe-web-gwt/src/main/webapp/css/qafe.less
@@ -1732,12 +1732,12 @@ body fieldset.contentPanelClass legend {
 }
 
 /* Fluid layout styling */
-table.gwt-DecoratedPanel {
+.gwt-DecoratedPanel {
   height: 100% !important;
   position: relative !important;
 }
 
-table.gwt-DecoratedPanel,
+.gwt-DecoratedPanel,
 table.gwt-DecoratedPanel > div,
 table.gwt-DecoratedPanel table,
 table.gwt-DecoratedPanel .gwt-ScrollTable {
@@ -1757,4 +1757,6 @@ table.gwt-DecoratedPanel > table {
 
 div.gwt-DecoratedPanel > div {
   position: relative !important;
+  width: 100% !important;
+  height: 100% !important;
 }
